<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>guru.springframework</groupId>
    <artifactId>testing-java-junit5-ci</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>testing-java-junit5-ci</name>
    <description>Testing Java with JUnit 5 CI</description>

    <organization>
        <name>Spring Framework Guru</name>
        <url>https://springframework.guru/</url>
    </organization>

    <developers>
        <developer>
            <id>jt</id>
            <name>John Thompson</name>
            <email>john@springframework.guru</email>
        </developer>
    </developers>

    <inceptionYear>2018</inceptionYear>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>9</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <junit-platform.version>5.3.1</junit-platform.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.11.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
                 
            <plugin>
		<groupId>org.jacoco</groupId>
		<artifactId>jacoco-maven-plugin</artifactId>
		<version>0.8.3</version>
		<!-- <configuration>
		  <skip>${maven.test.skip}</skip>
		  <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
		  <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
		  <output>file</output>
		  <append>true</append>
		  <excludes>
		    <exclude>*MethodAccess</exclude>
		  </excludes>
		</configuration> -->
		<executions>
		  <execution>
		    <id>coverage-initialize</id>
		    <goals>
		      <goal>prepare-agent</goal>
		    </goals>
		  </execution>
		  <execution>
		    <id>coverage-report</id>
		    <phase>post-integration-test</phase>
		    <configuration>
		      <dataFile>${basedir}/target/jacoco.exec</dataFile>
		    </configuration>
		    <goals>
		      <goal>report</goal>
		    </goals>
		  </execution>
		  <!-- Threshold -->
		  <execution>
		    <id>coverage-check</id>
		    <goals>
		      <goal>check</goal>
		    </goals>
		    <configuration>
		      <dataFile>${basedir}/target/jacoco.exec</dataFile>
		      <rules>
			<rule>
			  <element>CLASS</element>
			  <excludes>
			    <exclude>com.asimio.demo.Application</exclude>
			  </excludes>
			  <limits>
			    <limit>
			      <counter>LINE</counter>
			      <value>COVEREDRATIO</value>
			      <minimum>0%</minimum>
			    </limit>
			  </limits>
			</rule>
		      </rules>
		    </configuration>
		  </execution>
		</executions>
	      </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>
               <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <reportSets>
                   <reportSet>
                     <reports>
                       <!-- select non-aggregate reports -->
                       <report>report</report>
                     </reports>
                   </reportSet>
                 </reportSets>
               </plugin>
        </plugins>
    </reporting>
</project>
